# rcfiles

./: .cowrc  .gitallowed  .gitconfig  .gitignore  .gitmodules  .golangci.yml  .iex.exs  .neoconf.json  .run_setup  .taskrc  .tmux.conf  .vimrc  .wezterm.lua  .zshrc  Brewfile  LINUX_TIPS  LINUX_TIPS.md  README  README.md  append_user_crontable  coc  hacker-news.sh  install  install.bak  install.sh  install_skel  kde_konsave_profile.knsv  update_root_prefs
.config/nvim/: .luarc.json  CLAUDE.md  init.lua  lazy-lock.json  lazyvim.json  pyproject.toml
.config/nvim/lua/: ascii_art.lua
.config/nvim/lua/brpol/: commands.lua  hop_easymotion.lua  init.lua  lsp.lua  nvim-tree.lua  remap.lua  telescope.lua  treesitter.lua  vscode_theme.lua  windows.lua
.config/nvim/lua/brpol/snippets/: example_snippets.lua  first_snippet.lua  jupytext.lua  python.lua
.config/nvim/lua/brpol/snippets/vscode_style/: package.json
.config/nvim/lua/config/: keymaps.lua  options.lua
.config/nvim/lua/plugins/: ai.lua  autocomplete_lsp.lua  autocomplete_lsp_debug.lua  autocomplete_lsp_debug_snippets.lua  colorschemes.lua  conjure.lua  dap.lua  dashboard.lua  debugging.lua  flash.lua  formatting.lua  git.lua  html_css_colors.lua  init.lua  jupyter.lua  languages.lua  lazy_vim.lua  local_config.lua  motion_and_bindings.lua  neoconf.lua  neotree.lua  notes.lua  nvim-tree.lua  sessions_workspaces.lua  telescope.lua  terminal.lua  terminal_and_repl.lua  themes_and_ui.lua  treesitter_and_highlighting.lua  trouble.lua  ui.lua  vcs.lua
.config/nvim/spell/: en.utf-8.add  en.utf-8.add.spl
(+73 files in other folders)
