[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brandon Pollack", email = "brandonpollack23@gmail.com" }
]
dependencies = [
    # python packages for jupyter notebooks in neovim using molten.nvim,
    # https://github.com/benlubas/molten-nvim/tree/1a5360c59dc68230aac867fe262e4efc53f1b2d9?tab=readme-ov-file#requirements
    "neovim>=0.3.1",
    "pynvim>=0.5.0",
    "cairosvg>=2.7.1",
    "jupyter-client>=8.6.2",
    "jupytext>=1.16.2",
    "kaleido>=0.2.1",
    "nbformat>=5.10.4",
    "pillow>=10.4.0",
    "plotly>=5.22.0",
    "pnglatex>=1.1",
    "pyperclip>=1.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nvim"]
